[gd_scene load_steps=3 format=3 uid="uid://b0mkp25fppkwk"]

[ext_resource type="Theme" uid="uid://patt88e2oway" path="res://themes/main_menu_theme.tres" id="1_0ykhv"]
[ext_resource type="Script" uid="uid://dyeoxsuw3mlrs" path="res://scripts/MainMenu.gd" id="1_yqorp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0ykhv")
script = ExtResource("1_yqorp")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
focus_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Vampire Raiders"
horizontal_alignment = 1

[node name="EnterDungeon" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Dungeon"

[node name="Inventory" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="Character" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Character"

[connection signal="pressed" from="CenterContainer/VBoxContainer/EnterDungeon" to="." method="_on_enter_dungeon_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Character" to="." method="_on_character_pressed"]
